# WolfScale

./: .gitignore  Cargo.toml  LICENSE  README.md  build_out.txt  check_out.txt  install_service.sh  run.sh  setup.sh  setup_lb.sh  wolfscale.logrotate  wolfscale.toml.example
.codewolf/: conversation_codewolf.json
.github/: FUNDING.yml
docs/: DOCUMENTATION.md
examples/: list_tables.php
scripts/: install-service.sh  nginx-example.conf  publish.sh  run.sh
src/: config.rs  error.rs  id.rs  lb.rs  lib.rs  main.rs  tuning.rs
src/api/: http.rs  mod.rs
src/binlog/: client.rs  converter.rs  event.rs  mod.rs
src/executor/: mariadb.rs  mod.rs  schema.rs
src/network/: client.rs  discovery.rs  mod.rs  server.rs
src/proxy/: handler.rs  mod.rs  protocol.rs  server.rs
src/replication/: follower.rs  leader.rs  mod.rs  protocol.rs
src/state/: election.rs  membership.rs  mod.rs  tracker.rs
src/wal/: entry.rs  mod.rs  reader.rs  segment.rs  writer.rs
web/: .htaccess  CLAUDE.md  _sidebar.html  about.html  about.php  api.html  app-store.html  app-store.php  architecture.html  architecture.php  binlog.html  binlog.php  cli.html  cli.php  configuration.html  configuration.php  contact.html  contact.php  enterprise-contact.php  enterprise.html  enterprise.php  features.html  features.php  glossary.html  glossary.php  how-it-works.html  how-it-works.php  index.html  index.php  licensing.html  licensing.php  load-balancer.html  load-balancer.php  performance.html  performance.php  proxmox.html  proxmox.php  quickstart.html  quickstart.php  roadmap.html  (+58 more)
web/images/images/: about.html  api.html  architecture.html  binlog.html  cli.html  configuration.html  features.html  glossary.html  how-it-works.html  index.html  licensing.html  load-balancer.html  performance.html  proxmox.html  quickstart.html  sitemap.xml  troubleshooting.html  wolfdisk.html  wolfnet.html  wolfproxy.html  wolfserve.html  wolfstack-ai.html  wolfstack-api.html  wolfstack-clustering.html  wolfstack-containers.html  wolfstack-networking.html  wolfstack-storage.html  wolfstack.html
web/includes/: footer.php  head.php  mail-send.php  sidebar.php
wolfdisk/: Cargo.toml  README.md  install_service.sh  reset_client.sh  setup.sh
wolfdisk/src/: config.rs  error.rs  lib.rs  main.rs
wolfdisk/src/cluster/: mod.rs  state.rs
wolfdisk/src/fuse/: filesystem.rs  mod.rs
wolfdisk/src/network/: discovery.rs  mod.rs  peer.rs  protocol.rs
wolfdisk/src/replication/: mod.rs  sync.rs
wolfdisk/src/s3/: auth.rs  mod.rs  server.rs
wolfdisk/src/storage/: chunks.rs  index.rs  inode.rs  mod.rs
wolfnet/: Cargo.toml  setup.sh
wolfnet/src/: config.rs  crypto.rs  gateway.rs  lib.rs  main.rs  peer.rs  transport.rs  tun.rs
wolfnet/src/ctl/: main.rs
